# netcanv

./: .editorconfig  .gitignore  Cargo.toml  bootstrap.js  index.html  package-lock.json  package.json  src_index_js.bootstrap.js  webpack.config.js
.cargo/: config.toml
.github/workflows/: build.yaml  wasm.yaml
netcanv-protocol/src/: client.rs  relay.rs
netcanv-renderer/: Cargo.toml
netcanv-renderer-canvas/: Cargo.toml
netcanv-renderer-canvas/src/: common.rs  font.rs  framebuffer.rs  image.rs  lib.rs  rendering.rs  state.rs
netcanv-renderer-opengl/: Cargo.toml
netcanv-renderer-opengl/src/: common.rs  font.rs  framebuffer.rs  image.rs  lib.rs  rendering.rs
netcanv-renderer-opengl/src/font/: ab_glyph.rs  mod.rs
netcanv-ws-matchmaker/: Cargo.toml
netcanv-ws-matchmaker/src/: main.rs
src/: assets.rs  backend.rs  common.rs  config.rs  errors.rs  image_coder.rs  lib.rs  main.rs  paint_canvas.rs  project_file.rs
src/app/: lobby.rs  paint.rs
src/app/paint/: mod.rs  tool_bar.rs
src/app/paint/actions/: save_to_file.rs
src/app/paint/tools/: brush.rs  eyedropper.rs  mod.rs  selection.rs
src/clipboard/: clipboard_wasm.rs  mod.rs
src/net/: peer.rs  socket.rs
src/net/socket/: mod.rs  socket.rs  socket_wasm.rs
src/ui/: color_picker.rs  input.rs  text_field.rs  textfield.rs  view.rs
src/ui/wm/: mod.rs
web/: .eslintrc.json  bootstrap.js  clipboard.js  common.js  index.js  package-lock.json  package.json  socket.js  tsconfig.json  webpack.config.js
web/src/: bootstrap.js  bootstrap.ts  clipboard.ts  common.ts  index.html  socket.ts
www/: index.html  index.js
