[package]
name = "netcanv"
version = "0.4.0"
authors = ["lqdev <liquidekgaming@gmail.com>"]
edition = "2018"

[workspace]
members = [
   "netcanv-renderer",
   "netcanv-renderer-canvas",
   "netcanv-renderer-opengl",
   "netcanv-renderer-skia",
   "netcanv-matchmaker",
   "netcanv-ws-matchmaker",
   "netcanv-protocol",
]

[features]
default = ["renderer-canvas"]
renderer-skia = ["netcanv-renderer-skia"]
renderer-opengl = ["netcanv-renderer-opengl"]
renderer-canvas = ["netcanv-renderer-canvas"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]

# Common things
anyhow = "1.0.40"
heapless = { version = "0.7.7", default-features = false }
lazy_static = "1.4.0"

# Windowing and graphics
image = { version = "0.23.14", default-features = false, features = ["png", "jpeg"] }
usvg = { version = "0.14.0", default-features = false }
resvg = { version = "0.14.0", default-features = false }
tiny-skia = { version = "0.5.0", default-features = false, features = ["std", "simd"] }

# Networking
serde = { version = "1.0.123", features = ["derive"] }
bincode = "1.3.2"
url = "2.2.2"

# Multithreading
nysa = "0.2.2"

# Utilities
directories = "3.0.2"
toml = "0.5.8"

# Workspace
netcanv-renderer = { path = "netcanv-renderer" }
netcanv-renderer-skia = { path = "netcanv-renderer-skia", optional = true }
netcanv-renderer-opengl = { path = "netcanv-renderer-opengl", optional = true }
netcanv-renderer-canvas = { path = "netcanv-renderer-canvas", optional = true }
netcanv-protocol = { path = "netcanv-protocol" }

instant = "0.1.12"
log = "0.4.14"

once_cell = "1.8.0"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
native-dialog = "0.5.5"
webp = { version = "0.2.0", features = ["img"] }
arboard = "2.0.1"
async-std = "1.10.0"
async-tungstenite = { version = "0.16.0", features = ["async-std-runtime", "async-native-tls"] }
futures = "0.3.17"
simplelog = "0.11.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.78"
gloo-storage = "0.2.0"
gloo-file = "0.2.0"
console_log = "0.2.0"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.55"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.55"
features = [
   "HtmlCanvasElement",
   "Window",
   "Storage",
   "WebSocket",
   "MessageEvent",
   "BinaryType",
   "Worker",
   "DedicatedWorkerGlobalScope",
   "HtmlInputElement",
   "FileList",
   "File",
   "FileReader",
   "Blob",
   "BlobPropertyBag",
   "Url",
   "HtmlAnchorElement",
   "Navigator",
   "Permissions",
   "PermissionState",
   "PermissionStatus",
   "Clipboard"
]

[profile.release]
lto = "fat"
