[package]
name = "netcanv"
version = "0.9.0"
authors = ["liquidev <liquidev@tutanota.com>"]
description = "An online collaborative paint canvas."
repository = "https://github.com/liquidev/netcanv"
license = "Apache-2.0"

edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = [
   "netcanv-i18n",
   "netcanv-i18n-macros",
   "netcanv-renderer",
   "netcanv-renderer-opengl",
   "netcanv-renderer-canvas",
   "netcanv-relay",
   "netcanv-protocol",
]

[features]
default = ["renderer-canvas"]
renderer-opengl = ["netcanv-renderer-opengl"]
renderer-canvas = ["netcanv-renderer-canvas"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }

# Common things
heapless = { version = "0.7.7", default-features = false }
once_cell = "1.8.0"
phf = { version = "0.10.1", features = ["macros"] }
strum = { version = "0.23.0", features = ["derive"] }

# Logging
log = "0.4.14"
simple_logger = { version = "2.1.0", default-features = false, features = ["colors"] }

# Windowing and graphics
webbrowser = "0.5.5"
image = { version = "0.23.14", default-features = false, features = ["png", "jpeg"] }
usvg = { version = "0.14.0", default-features = false }
resvg = { version = "0.14.0", default-features = false }
tiny-skia = { version = "0.5.0", default-features = false, features = ["std", "simd"] }

# Internationalization
sys-locale = "0.1.0"

# Networking
serde = { version = "1.0.123", features = ["derive"] }
bincode = "1.3.2"

# Multithreading
nysa = "0.2.2"

# Utilities
directories = "3.0.2"
tempfile = "3.3.0"
toml = "0.5.8"
url = "2.2.2"
instant = "0.1.12"
futures = "0.3"
futures-util = { version = "0.3", features = ["sink", "std"] }

# Workspace
netcanv-renderer = { path = "netcanv-renderer" }
netcanv-renderer-opengl = { path = "netcanv-renderer-opengl", optional = true }
netcanv-renderer-canvas = { path = "netcanv-renderer-canvas", optional = true }
netcanv-protocol = { path = "netcanv-protocol", features = ["i18n"] }

netcanv-i18n = { path = "netcanv-i18n" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.16.1", features = ["full"] }
tokio-tungstenite = { version = "0.16.1", features = ["rustls-tls-native-roots"] }
webp = { version = "0.2.0", features = ["img"] }
arboard = "2.0.1"
native-dialog = "0.5.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.78"
gloo-storage = "0.2.0"
gloo-file = "0.2.0"
console_log = "0.2.0"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.55"
wasm-bindgen-futures = "0.4.30"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.55"
features = [
   "HtmlCanvasElement",
   "Window",
   "Storage",
   "WebSocket",
   "MessageEvent",
   "BinaryType",
   "Worker",
   "DedicatedWorkerGlobalScope",
   "HtmlInputElement",
   "FileList",
   "File",
   "FileReader",
   "Blob",
   "BlobPropertyBag",
   "Url",
   "HtmlAnchorElement",
   "Navigator",
   "Permissions",
   "PermissionState",
   "PermissionStatus",
   "Clipboard"
]

[profile.release]
lto = "fat"
