[package]
name = "netcanv"
version = "0.9.0"
authors = ["liquidev <liquidev@tutanota.com>"]
description = "An online collaborative paint canvas."
repository = "https://github.com/liquidev/netcanv"
license = "Apache-2.0"

edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = [
   "netcanv-i18n",
   "netcanv-i18n-macros",
   "netcanv-renderer",
   "netcanv-renderer-opengl",
   "netcanv-relay",
   "netcanv-protocol",
]

[features]
default = ["renderer-opengl"]
renderer-opengl = ["netcanv-renderer-opengl"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }

# Common things
heapless = { version = "0.7.16", default-features = false }
once_cell = "1.18.0"
phf = { version = "0.11.2", features = ["macros"] }
strum = { version = "0.25.0", features = ["derive"] }

# Logging
log = "0.4.20"
simple_logger = { version = "4.2.0", default-features = false, features = ["colors"] }

# Windowing and graphics
webbrowser = "0.8.11"
image = { version = "0.24.7", default-features = false, features = ["png", "jpeg", "webp"] }
usvg = { version = "0.14.0", default-features = false }
resvg = { version = "0.14.0", default-features = false }
tiny-skia = { version = "0.5.0", default-features = false, features = ["std", "simd"] }
rfd = "0.10.0"

# Internationalization
sys-locale = "0.3.1"

# Networking
serde = { version = "1.0.188", features = ["derive"] }
bincode = "1.3.2"

# Multithreading
nysa = "0.2.2"

# Utilities
directories = "5.0.1"
tempfile = "3.8.0"
toml = "0.8.0"
url = "2.4.1"
instant = "0.1.12"
futures = "0.3"
futures-util = { version = "0.3", features = ["sink", "std"] }

# Workspace
netcanv-renderer = { path = "netcanv-renderer" }
netcanv-renderer-opengl = { path = "netcanv-renderer-opengl", optional = true }
netcanv-protocol = { path = "netcanv-protocol", features = ["i18n"] }

netcanv-i18n = { path = "netcanv-i18n" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["rustls-tls-native-roots"] }
webp = { version = "0.2.0", features = ["img"] }
arboard = "2.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.88"
gloo-storage = "0.2.0"
gloo-file = "0.2.0"
gloo-net = "0.4.0"
console_log = "0.2.0"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.55"
wasm-bindgen-futures = "0.4.30"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.65"
features = [
   "HtmlCanvasElement",
   "Window",
   "Storage",
   "WebSocket",
   "MessageEvent",
   "BinaryType",
   "Worker",
   "DedicatedWorkerGlobalScope",
   "HtmlInputElement",
   "FileList",
   "File",
   "FileReader",
   "Blob",
   "BlobPropertyBag",
   "Url",
   "HtmlAnchorElement",
   "Navigator",
   "Permissions",
   "PermissionState",
   "PermissionStatus",
   "Clipboard",
   "ClipboardItem"
]

[profile.release]
lto = "fat"
