[package]
name = "netcanv-renderer-canvas"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.40"
winit = "0.25.0"
wasm-bindgen = { version = "0.2.78", features = ["nightly"] }
once_cell = "1.8.0"
wasm-bindgen-futures = "0.4.28"
log = "0.4.14"

netcanv-renderer = { path = "../netcanv-renderer" }

[dependencies.web-sys]
version = "0.3.55"
features = [
	"HtmlCanvasElement",
	"CanvasRenderingContext2d",
	"Window",
	"FontFace",
	"ImageData",
	"FontFaceSet",
	"DomTokenList",
	"Path2d",
	"TextMetrics"
]

[dependencies.js-sys]
version = "0.3.55"