[package]
name = "netcanv-renderer-canvas"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.40"
winit = { version = "0.26.0", features = ["serde"] }
wasm-bindgen = "0.2.83"
once_cell = "1.8.0"
wasm-bindgen-futures = "0.4.28"
log = "0.4.14"
image = { version = "0.23.14", default-features = false, features = ["png", "jpeg"] }
base64 = "0.13.0"

netcanv-renderer = { path = "../netcanv-renderer" }

[dependencies.web-sys]
version = "0.3.55"
features = [
	"HtmlCanvasElement",
	"CanvasRenderingContext2d",
	"Window",
	"FontFace",
	"ImageData",
	"FontFaceSet",
	"DomTokenList",
	"Path2d",
	"TextMetrics",
	"HtmlImageElement"
]

[dependencies.js-sys]
version = "0.3.55"
