[package]
name = "netcanv-renderer-opengl"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.40"
glow = "0.11.0"
memoffset = "0.6.4"
lazy_static = "1.4.0"
smallvec = { version = "1.7.0", features = ["const_generics"] }
glam = "0.19.0"
log = "0.4.14"

netcanv-renderer = { path = "../netcanv-renderer" }

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = "0.27.0"
freetype-rs = "0.28.0"
winit = "0.25.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.55", features = ["HtmlCanvasElement", "WebGl2RenderingContext", "Window"] }
wasm-bindgen = "0.2.78"
console_error_panic_hook = { version = "0.1.6", optional = true }
winit = { version = "0.25.0", features = ["web-sys"] }