[package]
name = "netcanv-renderer-opengl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
winit = { version = "0.27.4", features = ["serde"] }
glow = "0.12.3"
memoffset = "0.9.0"
swash = "0.1.8"
smallvec = { version = "1.11.1", features = ["const_generics"] }
glam = "0.24.2"
log = "0.4.20"

netcanv-renderer = { path = "../netcanv-renderer" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.29.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.55", features = ["HtmlCanvasElement", "WebGl2RenderingContext", "Window"] }
