[package]
name = "netcanv-ws-matchmaker"
version = "0.1.0"
authors = ["devildefu"]
edition = "2018"

[dependencies]

netcanv-protocol = { path = "../netcanv-protocol" }

serde = { version = "1.0.123", features = ["derive"] }
bincode = "1.3.2"
rand = "0.8.3"
crossbeam-channel = "0.4.4"
thiserror = "1.0.24"
anyhow = "1.0.40"

async-std = "1.10.0"
async-tungstenite = "0.16.0"
futures = "0.3.17"